--- a/03 - CSS Variables/index-Harry.html
+++ b/03 - CSS Variables/index-Harry.html
@@ -23,6 +23,22 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+
+    img {
+      padding: var(--spacing);
+      background-color: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .h1 {
+      color: var(--base);
+    }
+
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -46,6 +62,15 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input');
+
+    function updateStyle() {
+      const unit = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + unit);
+    }
+
+    inputs.forEach(input => input.addEventListener('change', updateStyle));
+    inputs.forEach(input => input.addEventListener('mousemove', updateStyle));
   </script>
 
 </body>
