--- a/07 - Array Cardio Day 2/index-Harry.html
+++ b/07 - Array Cardio Day 2/index-Harry.html
@@ -54,14 +54,29 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
+    console.log(people.some(person => new Date().getFullYear() - person.year > 19));
+    console.log(people.every(person => new Date().getFullYear() - person.year > 19));
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    console.log(comments.find(comment => {
+      if (comment.id === 823423) {
+        return comment;
+      }
+    }));
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    let getIndex = comments.findIndex(index => {
+      if (index.id === 823423) {
+        return index;
+      }
+    });
+    console.log(getIndex);
+    comments.splice(getIndex, 1);
+    console.table(comments);
   </script>
 </body>
 
