--- a/08 - Fun with HTML5 Canvas/index-Harry.html
+++ b/08 - Fun with HTML5 Canvas/index-Harry.html
@@ -9,12 +9,57 @@
 <body>
   <canvas id="draw" width="800" height="800"></canvas>
   <script>
+    const canvas = document.querySelector('#draw'),
+          ctx = canvas.getContext('2d');
+
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    ctx.strokeStyle = '#BADA55';
+    ctx.lineJoin = 'round';
+    ctx.lineCap = 'round';
+    ctx.lineWidth = 10;
+
+    let isDrawing = false,
+        lastX = 0,
+        lastY = 0,
+        hue = 0,
+        direction = true;
+
+    function draw(e) {
+      if(!isDrawing) {
+        return;
+      } else {
+        ctx.beginPath();
+        ctx.moveTo(lastX, lastY);
+        ctx.lineTo(e.offsetX, e.offsetY);
+        ctx.stroke();
+        [lastX, lastY] = [e.offsetX, e.offsetY];
+
+        ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+        hue+= 10;
+
+        if(ctx.lineWidth >= 20 || ctx.lineWidth < 5) {
+          direction = !direction;
+        }
+
+        direction === true ? ctx.lineWidth++ : ctx.lineWidth--;
+      }
+    }
+
+    canvas.addEventListener('mousemove', draw);
+    canvas.addEventListener('mousedown', (e) => {
+      [lastX, lastY] = [e.offsetX, e.offsetY];
+      isDrawing = true;
+    });
+    canvas.addEventListener('mouseup', () => isDrawing = false);
   </script>
 
   <style>
     html,
     body {
       margin: 0;
+      max-width: 100vw;
+      max-height: 100vh;
     }
   </style>
 
