--- a/05 - Flex Panel Gallery/index-Harry.html
+++ b/05 - Flex Panel Gallery/index-Harry.html
@@ -30,6 +30,8 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      /* 新增的樣式: */
+      display: flex;
     }
 
     .panel {
@@ -41,12 +43,21 @@
       /* Safari transitionend event.propertyName === flex */
       /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
-        font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+        /* font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
         flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
-        background 0.2s;
+        transform 0.2s; */
+        /* 有 font-size，flex 的原因請看程式第 92~96 行 */
+
+        /* 使用 all 代替 */
+        all 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      /* 新增的樣式: */
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
     }
 
     .panel1 {
@@ -74,6 +85,11 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      /* 新增的樣式: */
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .panel p {
@@ -89,6 +105,22 @@
 
     .panel.open {
       font-size: 40px;
+      /* 新增的樣式: */
+      flex: 5;
+    }
+
+    /* 新增的樣式: */
+    .panel>*:first-child {
+      transform: translateY(-100%);
+    }
+
+    .panel>*:last-child {
+      transform: translateY(100%);
+    }
+
+    .panel.open-active>*:first-child,
+    .panel.open-active>*:last-child {
+      transform: translateY(0);
     }
   </style>
 
@@ -122,10 +154,19 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
 
+    panels.forEach(panel => panel.addEventListener('click', function () {
+      this.classList.toggle('open');
+    }))
+
+    panels.forEach(panel => panel.addEventListener('transitionend', function (e) {
+      console.log(e.propertyName); // 得知目前 transition 的 CSS 屬性有哪些
+      if (e.propertyName.includes('flex')) {
+        this.classList.toggle('open-active');
+      }
+    }))
   </script>
-
-
 
 </body>
 
