--- a/14 - JavaScript References VS Copying/index-Harry.html
+++ b/14 - JavaScript References VS Copying/index-Harry.html
@@ -29,10 +29,19 @@
     // So, how do we fix this? We take a copy instead!
 
     // one way
+    // 完整複製一個不是 reference 的陣列: 方法1:
+    const team2 = players.slice();
 
     // or create a new array and concat the old one in
+    // 方法2:
+    const team3 = [].concat(players);
 
     // or use the new ES6 Spread
+    // 方法3:
+    const team4 = [...players];
+
+    // 方法4:
+    const team5 = Array.from(players);
 
     // now when we update it, the original one isn't changed
 
@@ -45,10 +54,30 @@
     };
 
     // and think we make a copy:
+    // 方法1:
+    const person2 = Object.assign({}, person, {
+      height: 172
+    });
+
+    // 方法2:
+    const cap3 = {
+      ...person
+    };
 
     // how do we take a copy instead?
+    const wes = {
+      name: 'Wes',
+      age: 100,
+      social: {
+        twitter: '@wesbos',
+        facebook: 'wesbos.developer'
+      }
+    };
 
     // We will hopefully soon see the object ...spread
+    const dev = Object.assign({}, wes);
+
+    const dev2 = JSON.parse(JSON.stringify(wes));
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
   </script>
