--- a/19 - Webcam Fun/index.html
+++ b/19 - Webcam Fun/index.html
@@ -10,7 +10,7 @@
   <div class="photobooth">
     <div class="controls">
       <button onClick="takePhoto()">Take Photo</button>
-<!--       <div class="rgb">
+      <div class="rgb">
         <label for="rmin">Red Min:</label>
         <input type="range" min=0 max=255 name="rmin">
         <label for="rmax">Red Max:</label>
@@ -29,7 +29,7 @@
         <input type="range" min=0 max=255 name="bmin">
         <label for="bmax">Blue Max:</label>
         <input type="range" min=0 max=255 name="bmax">
-      </div> -->
+      </div>
     </div>
 
     <canvas class="photo"></canvas>
@@ -39,7 +39,7 @@
 
   <audio class="snap" src="https://wesbos.com/demos/photobooth/snap.mp3" hidden></audio>
 
-  <script src="scripts.js"></script>
+  <script src="scripts-Harry.js"></script>
 
 </body>
 </html>
