--- a/20 - Speech Detection/index-Harry.html
+++ b/20 - Speech Detection/index-Harry.html
@@ -7,15 +7,6 @@
 </head>
 
 <body>
-
-  <div class="words" contenteditable>
-  </div>
-
-  <script>
-    window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-  </script>
-
-
   <style>
     html {
       font-size: 10px;
@@ -57,6 +48,37 @@
     }
   </style>
 
+  <div class="words" contenteditable>
+  </div>
+
+  <script> 
+    window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+
+    const recognition = new SpeechRecognition();
+    recognition.interimResults = true;
+    recognition.lang = 'en-US';
+
+    const words = document.querySelector('.words');
+    let p = document.createElement('p');
+    words.appendChild(p);
+
+    recognition.addEventListener('result', function (e) {
+      const transcript = Array.from(e.results)
+      .map(result => result[0])
+      .map(result => result.transcript).join('');
+
+      const poopScript = transcript.replace(/poop|poo|shit|dump/gi, '💩');
+      p.textContent = poopScript;
+
+      if(e.results[0].isFinal) {
+        p = document.createElement('p');
+        words.appendChild(p);
+      }
+    })
+
+    recognition.addEventListener('end', recognition.start);
+    recognition.start();
+  </script>
 </body>
 
 </html>
