--- a/22 - Follow Along Link Highlighter/index-Harry.html
+++ b/22 - Follow Along Link Highlighter/index-Harry.html
@@ -33,7 +33,28 @@
   </div>
 
   <script>
-    // 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀
+    const links = document.querySelectorAll('a');
+    const hightlight = document.createElement('span');
+    hightlight.classList.add('highlight');
+    document.body.appendChild(hightlight);
+
+    function hightlightLink(e) {
+      const linkCoords = this.getBoundingClientRect();
+      console.log(linkCoords);
+      
+      const coords = {
+        width: linkCoords.width,
+        height: linkCoords.height,
+        top: linkCoords.top + window.scrollY,
+        left: linkCoords.left + window.scrollX
+      }
+
+      hightlight.style.width = `${coords.width}px`;
+      hightlight.style.height = `${coords.height}px`;
+      hightlight.style.transform = `translate(${coords.left}px, ${coords.top}px)`;
+    }
+
+    links.forEach(link => link.addEventListener('mouseenter', hightlightLink));
   </script>
 </body>
 
