--- a/24 - Sticky Nav/index-Harry.html
+++ b/24 - Sticky Nav/index-Harry.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Sticky Nav</title>
-  <link rel="stylesheet" href="style-START.css">
+  <link rel="stylesheet" href="style-Harry.css">
 </head>
 
 <body>
@@ -172,7 +172,20 @@
   </div>
 
   <script>
+    const main = document.querySelector('#main');
+    let mainTop = main.offsetTop;
 
+    function fixNav() {
+      if(window.scrollY >= mainTop) {
+        document.body.classList.add('fixed-nav');
+        document.body.paddingTop = `${main.offsetHeight}px`;
+      } else {
+        document.body.classList.remove('fixed-nav');
+        document.body.paddingTop = 0;
+      }
+    }
+
+    window.addEventListener('scroll', fixNav);
   </script>
 
 </body>
