--- a/26 - Stripe Follow Along Nav/index-Harry.html
+++ b/26 - Stripe Follow Along Nav/index-Harry.html
@@ -233,6 +233,41 @@
   </style>
 
   <script>
+    const triggers = document.querySelectorAll('.cool > li');
+    const background = document.querySelector('.dropdownBackground');
+    const nav = document.querySelector('.top');
+
+    function handleEnter() {
+      this.classList.add('trigger-enter');
+      // 有 trigger-enter class 才觸發後面的程式碼
+      setTimeout(() => { this.classList.contains('trigger-enter') && this.classList.add('trigger-enter-active'); }, 150);
+      background.classList.add('open');
+
+      const dropdown = this.querySelector('.dropdown');
+      const dropdownCoords = dropdown.getBoundingClientRect();
+      // 為了減去 nav 元素上面的元素所佔的位置，所以也要取到 nav 的位置並減掉它
+      const navCoords = nav.getBoundingClientRect();
+
+      const coords = {
+        width: dropdownCoords.width,
+        height: dropdownCoords.height,
+        top: dropdownCoords.top - navCoords.top,
+        left: dropdownCoords.left - navCoords.left
+      }
+
+      background.style.setProperty('width', `${coords.width}px`);
+      background.style.setProperty('height', `${coords.height}px`);
+      // translate(x, y)
+      background.style.setProperty('transform', `translate(${coords.left}px, ${coords.top}px)`);
+    }
+
+    function handleLeave() {
+      this.classList.remove('trigger-enter', 'trigger-enter-active');
+      background.classList.remove('open');
+    }
+
+    triggers.forEach(trigger => trigger.addEventListener('mouseenter', handleEnter));
+    triggers.forEach(trigger => trigger.addEventListener('mouseleave', handleLeave));
   </script>
 
 </body>
