--- a/28 - Video Speed Controller/index-Harry.html
+++ b/28 - Video Speed Controller/index-Harry.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Video Speed Scrubber</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
   <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" loop
-      controls></video>
+    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" loop controls></video>
     <div class="speed">
       <div class="speed-bar">1×</div>
     </div>
   </div>
 
   <script>
+    const speed = document.querySelector('.speed');
+    const bar = speed.querySelector('.speed-bar');
+    const video = document.querySelector('.flex');
+
+    function handleMove(e) {
+      const percent = (e.clientY - this.offsetTop) / this.offsetHeight,
+            min = 0.5,
+            max = 4;
+            height = Math.floor(percent * 100) + '%';
+      let speed = percent * (max - min) + min;
+
+      bar.style.height = height;
+      bar.textContent = speed.toFixed(2) + 'x';
+      video.playbackRate = speed;
+    }
+
+    speed.addEventListener('mousemove', handleMove);
   </script>
 </body>
 
